--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Portfolio#index</h1>
-<p>Find me in app/views/portfolio/index.html.erb</p>
+<div class="container">
+
+    <div class="invitaion-desc"></div>
+    <div class="invitation-types">
+          <label class="chose-your-event">Chose your Event</label>
+          <ul class="display-tiles">
+            <%@type.each do |type|%>
+                <li onclick="window.location.href = '/portfolio/new/<%=type.id%>'"><%= type.invitation_type%></li>
+            <%end%>
+          </ul>
+    </div>
+      
+</div>
