--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>INVITEEZ@home</title>
     <%= stylesheet_link_tag :design_main %>
     <%= javascript_include_tag "application" %>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Gudea">
     <%= csrf_meta_tag %>
   </head>
   <body>
