--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,7 +4,19 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Welcome to inviteez <%= @user_name %></h1>
+    <style>
+body {
+    background-color: #789E42;
+    font-family: Georgia,"Times New Roman",Times,serif;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    width: 100%;
+}
+    </style>
+    <h1>Welcome to inviteez <%= @user_name %>
+    </h1>
     <p>
       <%=Time.now%><br/>
     </p>
