--- a/app/assets/stylesheets/design_main.css
+++ b/app/assets/stylesheets/design_main.css
@@ -65,6 +65,44 @@ a{
     clear:both;
 }
 
+.notifications{
+    background: -moz-linear-gradient(center top , #2C2C2C, #4D4D4D 100%) repeat scroll 0 0 transparent;
+    background:#B3B3B3;
+    background:-moz-linear-gradient(center top , #2C2C2C, #4D4D4D) repeat scroll 0 0 transparent;
+    background:-moz-linear-gradient(top,#2C2C2C, #4D4D4D);
+    background:-webkit-linear-gradient(top,#2C2C2C, #4D4D4D);
+    background:-o-linear-gradient(top,#2C2C2C, #4D4D4D);
+    background:linear-gradient(top,#2C2C2C, #4D4D4D);
+    height: 25px;
+    width: 100%;
+}
+
+.notifications a{
+    background:#B3B3B3;
+    background:-moz-linear-gradient(center top , #B3B3B3, #FFFFFF) repeat scroll 0 0 transparent;
+    background:-moz-linear-gradient(top,#B3B3B3, #FFFFFF);
+    background:-webkit-linear-gradient(top,#B3B3B3, #FFFFFF);
+    background:-o-linear-gradient(top,#B3B3B3, #FFFFFF);
+    background:linear-gradient(top,#B3B3B3, #FFFFFF);
+    color: black;
+    height: 100%;
+    text-align: center;
+    width: 75px;
+}
+
+.notifications a.next{float: right}
+.notifications a.prev{float: left}
+
+.notifications ul{
+    color: white;
+    float: left;
+    font-size: 14px;
+    list-style: none outside none;
+    margin-top: 3px;
+    text-align: center;
+    width: 88%;
+}
+
 #wrapper{    
     width: 80%;
     margin: 0 10%;
@@ -79,7 +117,7 @@ a{
     background-image: url(/assets/web/inviteez-logo.png);
     height: 97px;
     width: 276px;
-    margin-top: 35px;
+    margin-top: 25px;
     cursor: pointer;
     float: left;
 }
@@ -97,12 +135,29 @@ a{
     -moz-border-right-colors: none;
     -moz-border-top-colors: none;
     -moz-transition: all 0.2s ease-in-out 0s;
-    background: -moz-linear-gradient(center top , #B3B3B3, #FFFFFF) repeat scroll 0 0 transparent;
+    background:#B3B3B3;
+    background:-moz-linear-gradient(center top , #B3B3B3, #FFFFFF) repeat scroll 0 0 transparent;
+    background:-moz-linear-gradient(top,#B3B3B3, #FFFFFF);
+    background:-webkit-linear-gradient(top,#B3B3B3, #FFFFFF);
+    background:-o-linear-gradient(top,#B3B3B3, #FFFFFF);
+    background:linear-gradient(top,#B3B3B3, #FFFFFF);
     border-color: #FFFFFF;
-    border-radius: 3px 3px 3px 3px;
+    border-bottom-width:3px;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+
     border-style: solid;
     border-width: 1px 1px 3px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5), 0 1px 0 rgba(255, 255, 255, 0.1) inset;
+    -moz-box-shadow:
+    0 0 5px rgba(0,0,0,0.5),
+    0 1px 0 rgba(255,255,255,0.1) inset;
+    -webkit-box-shadow:
+    0 0 5px rgba(0,0,0,0.5),
+    0 1px 0 rgba(255,255,255,0.1) inset;
+    box-shadow:
+    0 0 5px rgba(0,0,0,0.5),
+    0 1px 0 rgba(255,255,255,0.1) inset;
     color: #6A6A6A;
     cursor: pointer;
     display: inline-block;
@@ -112,7 +167,7 @@ a{
     line-height: 1;
     padding: 55px 15px;
     text-decoration: none;
-    text-shadow: 0 0 2px #6A6A6A
+    text-shadow: 0 0 2px #6A6A6A;
     text-transform: uppercase;
 }
 
@@ -124,7 +179,7 @@ a{
 .login-box{
     float: right;
     height: 100px;
-    margin-top: 40px;
+    margin-top: 25px;
     width: 385px;
 }
 .logged-in-user{
@@ -136,7 +191,8 @@ a{
 }
 
 .logged-in-user a{
-    
+    color: #B3B3B3;
+    float: right;
 }
 
 .login-box dl{
@@ -319,9 +375,16 @@ ul.error-box{
 }
 
 /*---------portfolio --------------*/
+.invitaion-desc{
+    float: left;
+    height: 450px;
+    width: 30%;
+}
+
 .invitation-types{
     height: 100%;
     width: 70%;
+    float: left;
 }
 
 .invitation-types ul.display-tiles{
@@ -351,9 +414,52 @@ ul.error-box{
 
 /*--------Add new Event -----*/
 .new-event{
-    border: 1px solid white;
     height: 100%;
     width: 60%;
+}
+
+.new-event dl dt textarea,
+.new-event dl dt input{
+    -moz-border-bottom-colors: none;
+    -moz-border-image: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    -moz-transition: all 0.2s ease-in-out 0s;
+    background:#B3B3B3;
+    background:-moz-linear-gradient(center top , #B3B3B3, #FFFFFF) repeat scroll 0 0 transparent;
+    background:-moz-linear-gradient(top,#B3B3B3, #FFFFFF);
+    background:-webkit-linear-gradient(top,#B3B3B3, #FFFFFF);
+    background:-o-linear-gradient(top,#B3B3B3, #FFFFFF);
+    background:linear-gradient(top,#B3B3B3, #FFFFFF);
+    border-color: #FFFFFF;
+    border-bottom-width:1px;
+    -moz-border-radius:1px;
+    -webkit-border-radius:1px;
+    border-radius:1px;
+    border-style: solid;
+    border-width: 1px 1px 3px;
+    -moz-box-shadow:
+    0 0 5px rgba(0,0,0,0.5),
+    0 1px 0 rgba(255,255,255,0.1) inset;
+    -webkit-box-shadow:
+    0 0 5px rgba(0,0,0,0.5),
+    0 1px 0 rgba(255,255,255,0.1) inset;
+    box-shadow:
+    0 0 5px rgba(0,0,0,0.5),
+    0 1px 0 rgba(255,255,255,0.1) inset;
+    font-family: "Gudea", "Arial";
+    font-size: 13px;
+    letter-spacing: 1px;
+    line-height: 1;
+    padding: 5px;
+    text-decoration: none;
+    text-shadow: 0 0 2px #6A6A6A;
+    width: 400px;
+}
+
+.new-event dl dt{
+    margin: 10px 0;
 }
 
 .new-event dl dt label{
@@ -362,6 +468,18 @@ ul.error-box{
     width: 130px;
 }
 
+.new-event dl dt input.create-event{
+    background: -moz-linear-gradient(center top , #1D83C6, #2093DB) repeat scroll 0 0 transparent;
+    border-color: #2093DB;
+    margin-left: 276px;
+    width: 100px;
+}
+
+.new-event dl dt a.form-link{
+    color: white;
+    float: left;
+    font-size: 18px;
+}
 
 /*---------portfolio --------------*/
 
