--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
   </head>
   <body>
 
+
+<div class="notifications">
+  <a class="prev" href="#" title="Prev"><img style="float: left" src="/assets/web/left.png" />Prev</a>
+  <ul>
+    <li>New designs are just arrived, check them all.....</li>
+  </ul>
+  <a class="next" href="#" title="Next">Next<img style="float: right" src="/assets/web/right.png" /></a>
+</div>
 <div id="wrapper">
   <div class="header">
       <div id="logo"></div>
