complete database schema has been changed, for more information see http://dbdsgnr.appspot.com/app#agdkYmRzZ25ycg4LEgZTY2hlbWEYg-cxDA

--- a/app/views/portfolio/new.html.erb
+++ b/app/views/portfolio/new.html.erb
@@ -11,6 +11,8 @@
           </ul>
           <dl>
               <dt>
+                  <%=f.hidden_field :user_id, :value => current_user.id%>
+                  <%=f.hidden_field :invitation_id, :value => params[:id]%>
                   <%=f.label :title %>
                   <%=f.text_field :title %>
                   <a href="#" title="Event Title" onmouseover=""> ? </a>
