--- a/app/assets/stylesheets/design_main.css
+++ b/app/assets/stylesheets/design_main.css
@@ -425,14 +425,57 @@ ul.error-box{
 /*---------portfolio --------------*/
 .invitaion-desc{
     float: left;
-    height: 450px;
-    width: 30%;
+    height: 398px;
+    width: 29%;
+    padding: 0px;
+    -moz-border-bottom-colors: none;
+    -moz-border-image: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    -moz-transition: all 0.2s ease-in-out 0s;
+    background:#B3B3B3;
+    background: -moz-linear-gradient(center top , #000 12px, #000 31px) repeat scroll 0 0 transparent;
+    background:-moz-linear-gradient(top,#000 12px, #000 31px);
+    background:-webkit-linear-gradient(top,#000 12px, #000 31px);
+    background:-o-linear-gradient(top,#000 12px, #000 31px);
+    background:linear-gradient(top,#000 12px, #000 31px);
+    border-color: #000;
+    border-bottom-width:0px;
+    -moz-border-radius:0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border-style: solid;
+    border-width: 1px 1px 3px;
+    -moz-box-shadow:
+    0 0 10px #fff,
+    0 1px 0 rgba(255,255,255,0.1) inset;
+    -webkit-box-shadow:
+    0 0 10px #fff,
+    0 1px 0 rgba(255,255,255,0.1) inset;
+    box-shadow:
+    0 0 10px #fff,
+    0 1px 0 rgba(255, 255, 255, 0.1) inset;
+
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Gudea", "Arial";
+    font-size: 15px;
+    letter-spacing: 1px;
+    line-height: 1;
+    text-decoration: none;
+    text-shadow: 0 0 2px #fff;
+    text-align: center;
+    opacity: 0.5;
+    margin: 48px 0 10px;
+
 }
 
 .invitation-types{
     height: 100%;
     width: 70%;
-    float: left;
+    float: right;
 }
 
 .invitation-types ul.display-tiles{
