--- a/app/views/portfolio/new.html.erb
+++ b/app/views/portfolio/new.html.erb
@@ -2,17 +2,28 @@
   <div class="new-event">
       <%=form_for("event", :url => "/portfolio/create") do |f| %>
           <label class="text-header">Lets create a new Event</label>
-          <ul class="error-box" style="display: none;">
-              <%if flash[:notice]%>
-                  <%flash[:notice].each do |field,msg|%>
-                      <li><%=field.capitalize%> <%=msg%></li>
-                  <%end%>
-              <%end%>
-          </ul>
+          
+          
           <dl>
+              <%if flash[:notice]%>
               <dt>
+                  <label>&nbsp;</label>
+                  <div class="error-box-new" style="">
+                    <%flash[:notice].each do |field,msg|%>
+                      <span><%=field.to_s.humanize%> <%=msg.join(", ")%></span><br/>
+                    <%end%>
+                  </div>
+              </dt>
+              <%end%>
+
+              <dt>
+                  <label>Event Type</label>
+                  <%=f.text_field :invitation_type, :value => @invitation.invitation_type.humanize, :disabled => true%>
+              </dt>
+              
+              <dt>
+                  <%=f.hidden_field :invitation_id, :value => @invitation.id%>
                   <%=f.hidden_field :user_id, :value => current_user.id%>
-                  <%=f.hidden_field :invitation_id, :value => params[:id]%>
                   <%=f.label :title %>
                   <%=f.text_field :title %>
                   <a href="#" title="Event Title" onmouseover=""> ? </a>
@@ -35,16 +46,31 @@
                   <a href="#" title="Event description" onmouseover=""> ? </a>
               </dt>
 
-              <dt>
-                  <%=f.label :bride_info %>
-                  <%=f.text_field :bride_info%>
-                  <a href="#" title="Bride Name" onmouseover=""> ? </a>
-              </dt>
-              <dt>
-                  <%=f.label :groom_info %>
-                  <%=f.text_field :groom_info %>
-                  <a href="#" title="Groom Name" onmouseover=""> ? </a>
-              </dt>
+              
+                <%if @invitation.id == 2 || @invitation.id == 4%>
+                  <dt>
+                      <%=f.label :bride %>
+                      <%=f.text_field :bride_info%>
+                      <a href="#" title="Bride Name" onmouseover=""> ? </a>
+                  </dt>
+                  <dt>
+                      <%=f.label :groom %>
+                      <%=f.text_field :groom_info %>
+                      <a href="#" title="Groom Name" onmouseover=""> ? </a>
+                  </dt>
+                <%elsif @invitation.id == 3%>
+                  <dt>
+                      <%=f.label "Wife Name" %>
+                      <%=f.text_field :bride_info%>
+                      <a href="#" title="Bride Name" onmouseover=""> ? </a>
+                  </dt>
+                  <dt>
+                      <%=f.label "Husband Name" %>
+                      <%=f.text_field :groom_info %>
+                      <a href="#" title="Groom Name" onmouseover=""> ? </a>
+                  </dt>
+                <%end%>
+              
               <dt>
                   <%=f.label :venue %>
                   <%=f.text_area :venue,:size => "50x5" %>
@@ -67,3 +93,17 @@
 
   <div class="preview-box"></div>
 </div>
+
+<script type="text/javascript">
+    <%unless flash[:notice].nil?%>
+        <%flash[:error].each do |field,msg|%>
+            //alert("<%=msg%>");
+            <%if msg.include?("<#>")%> //include ERROR symbol
+                <%msg = msg.gsub("<#>","")%>
+                $("#event_<%=field%>").addClass("error");
+            <%end%>
+            //alert('<%=field%>', '<%=msg%>');
+            $("#event_<%=field%>").val("<%=msg%>");
+        <%end%>
+    <%end%>
+</script>
