--- a/app/views/portfolio/new.html.erb
+++ b/app/views/portfolio/new.html.erb
@@ -18,7 +18,7 @@
 
               <dt>
                   <label>Event Type</label>
-                  <%=f.text_field :invitation_type, :value => @invitation.invitation_type.humanize, :disabled => true%>
+                  <%=f.text_field :name, :value => @invitation.name.humanize, :disabled => true%>
               </dt>
               
               <dt>
