--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -7,6 +7,7 @@
             <%@type.each do |type|%>
                 <li class="label" style="" onclick="window.location.href = '/portfolio/design?type=<%=type.id%>'"><%= type.name%></li>
             <%end%>
+            <li class="label" style="" onclick="window.location.href = '/portfolio/design?type=all'">Show All</li>
           </ul>
     </div>
       
