modified some files for PG database

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -21,7 +21,7 @@ body {
       <%=Time.now%><br/>
     </p>
     <p>
-      To login to the site, just follow this link: <a href="http://192.168.1.14:3000">Click here</a>.
+      To login to the site, just follow this link: <a href="http://fierce-sunset-8159.herokuapp.com">Click here</a>.
     </p>
     <p>Thanks for joining and have a great day!</p>
   </body>
