moodelbox => done, basic panel design => done

--- a/app/views/home/tmp_design.html.erb
+++ b/app/views/home/tmp_design.html.erb
@@ -2,6 +2,7 @@
   <head>
     <title>INVITATION_TITLE</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Italianno"/>
+    <script src="/assets/application.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="wrapper">
@@ -31,7 +32,7 @@
 
         <div class="partners-name">
           <label class="partner-one">Partner One</label><br/>
-          <label class="and">weds</label><br/>
+          <label class="and">and</label><br/>
           <label class="partner-two">Partner Two</label>
         </div>
 
@@ -41,6 +42,10 @@
             <label>Contact Name two</label><br/>
             <label><a href="mailto:abc@example.com">abc@example.com</a></label>&nbsp; | &nbsp;<label>+91 9820 345 678</label>
         </div>
+    </div>
+
+
+    <div id="load-panel">
     </div>
 
     <style>
@@ -58,7 +63,7 @@
         text-decoration: none;
       }
       #wrapper{
-          background-image: url("/assets/web/invitation_designs/wedding/black-with-red-rose.jpg");
+          background-image: url("/assets/web/invitation_designs/black-with-red-rose.jpg");
           background-repeat: no-repeat;
           border: 10px solid white;
           display: block;
@@ -99,7 +104,7 @@
           float: left;
           font-size: 40px;
           padding-left: 20px;
-          width: 365px; 
+          width: 365px;
       }
       .partner-two{
           font-size: 40px;
@@ -111,14 +116,14 @@
           font-size: 40px;
           margin-left: 20px;
           margin-top: -10px;
-          width: 365px;     
+          width: 365px;
       }
       .events-venue{
             color: black;
             font-size: 32px;
             margin-top: 25px;
             text-align: right;
-            
+
       }
       .event-on{
           color: black;
@@ -134,7 +139,7 @@
       .left-container{
         float: left;
         height: 150px;
-        width: 500px;       
+        width: 500px;
       }
       .right-container{
         float: left;
