--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <style>
 body {
-    background-color: #789E42;
+    background-color: red;
     font-family: Georgia,"Times New Roman",Times,serif;
     height: 100%;
     margin: 0;
