--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Gudea"/>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <style>
+<style>
 body {
     background-color: red;
-    font-family: Georgia,"Times New Roman",Times,serif;
+    font-family: Gudea;
     height: 100%;
     margin: 0;
     padding: 0;
     position: absolute;
     width: 100%;
 }
-    </style>
+</style>
+<div style="background-color: red;color:#fff;font-family: gudea">
     <h1>Welcome to inviteez <%= @user_name %>
     </h1>
     <p>
@@ -24,5 +26,6 @@ body {
       To login to the site, just follow this link: <a href="http://fierce-sunset-8159.herokuapp.com">Click here</a>.
     </p>
     <p>Thanks for joining and have a great day!</p>
+</div>
   </body>
 </html>
